# teaql-cargo-cli

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md
.agents/: AGENTS.md
.github/workflows/: ci.yml
src/: cli.rs  config.rs  eval.rs  generator.rs  lib.rs  main.rs  service.rs
