[package]
name = "cargo-teaql"
version = "0.1.2"
edition = "2024"
description = "Rust CLI for TeaQL service code generation workflows"
license = "MIT"
repository = "https://github.com/teaql/teaql-cargo-cli"
homepage = "https://github.com/teaql/teaql-cargo-cli"
readme = "README.md"

[[bin]]
name = "cargo-teaql"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.12"
walkdir = "2.5"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
